[metadata]
name = flake8-assertive
version = attr: flake8_assertive.__version__
author = Jon Parise
author_email = jon@indelible.org
description = Flake8 unittest assert method checker
long_description = file: README.rst, LICENSE, CHANGELOG.rst
license = MIT
url = https://github.com/jparise/flake8-assertive
project_urls =
    Source Code = https://github.com/jparise/flake8-assertive
    Issue Tracker = https://github.com/jparise/flake8-assertive/issues
keywords = flake8 testing unittest assert
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Unit

[options]
py_modules = flake8_assertive
python_requires = >= 3.7
zip_safe = True

[options.entry_points]
flake8.extension =
    A50 = flake8_assertive:Checker

[flake8]
exclude=.eggs/,.git/,.venv/,build/,dist/
extend-ignore = E203
max-line-length = 88
